# ferdosi

./: .gitignore  .gitmodules  CMakeLists.txt  Ferdosi.f90  FerdosiSpec.txt
TestData/Ferdosi100Sire/: AllOffspringGenotypes.txt  FerdosiSpec.txt  Pedigree.txt  PhaseSire.txt
TestData/Ferdosi10Sire/: AllOffspringGenotypes.txt  FerdosiSpec.txt  Pedigree.txt  PhaseSire.txt
TestData/Ferdosi200Sire/: AllOffspringGenotypes.txt  FerdosiSpec.txt  Pedigree.txt  PhaseSire.txt
TestData/Ferdosi20Sire/: AllOffspringGenotypes.txt  FerdosiSpec.txt  Pedigree.txt  PhaseSire.txt  test.txt
TestData/Ferdosi50Sire/: AllOffspringGenotypes.txt  FerdosiSpec.txt  Pedigree.txt  PhaseSire.txt  a.out  test.f90
src/: CMakeLists.txt  Ferdosi.f90  FerdosiTesterMain.f90  ModuleAccuracy.f90  ModuleGet.f90  ModuleParameters.f90  ModuleReadFiles.f90  ModuleRunFerdosi.f90  ModuleSireType.f90  ModuleTLC.f90  ModuleWriteFiles.f90
